# serializer version: 1
# name: TestTransactionsGeodataUpdate.test_file_upload_error
  dict({
    'code': 'api.internal',
    'message': 'Location file upload error',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_invalid_location_type[gps]
  dict({
    'code': 'api.bad_request',
    'message': 'Location file is not supported for this location type',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_invalid_location_type[manual]
  dict({
    'code': 'api.bad_request',
    'message': 'Location file is not supported for this location type',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_success[file]
  dict({
    'message': 'Transaction geodata updated',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_success[qr]
  dict({
    'message': 'Transaction geodata updated',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_transaction_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_transaction_not_user
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataUpdate.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
